Fix #237, CodeMirror editor scrolls if word wrap is off

--- a/chrome/css/styles.css
+++ b/chrome/css/styles.css
@@ -1309,6 +1309,7 @@ li .right {
 /* CodeMirror overrides */
 #response .CodeMirror {
     margin-left: -1px;
+    overflow-x: auto;
 }
 
 .CodeMirror pre {
